Fixed margin problem on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -375,8 +375,9 @@ section {
 }
 
 .workapp .container .workimg{
-    width: 450px;
-    height: 350px;
+
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -629,7 +630,7 @@ section {
 }
 
 .footer .box-conteiner .box h3 i {
-    color: var(--orange);
+    color: rgba(214, 48, 48, 0.904)
 }
 
 .footer .box-conteiner .box .links {
